components/tailscale/proxy.yaml
# Tailscale egress proxy to connect cluster to your tailnet
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-egress
  namespace: tailscale
  annotations:
    tailscale.com/tailnet-fqdn: jellyfin.tailscale.ts.net
spec:
  type: ExternalName
  externalName: media.tail8ca202.ts.net
  ports:
  - port: 8096
    targetPort: 8096
    protocol: TCP
