components/tailscale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: media-tailscale
  namespace: tailscale
spec:
  type: ExternalName
  externalName: media.tailscale.ts.net
  ports:
    - port: 8096
      targetPort: 8096
      protocol: TCP
      name: http
